# tg_rs

./: README.md  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml  test.yml
.python/: requirements.txt
src/: App.vue
src-tauri/: Cargo.toml  app.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/py/: app.py
src-tauri/src/: lib.rs  main.rs
src/storage_store/: index.ts
